# spatial_transformation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doc_mainpage.rst  package.xml  pyproject.toml  setup.cfg
doc/: breathing_cat.toml
include/spatial_transformation/: pointcloud.hpp  transformation.hpp
spatial_transformation/: __init__.py  _transformation.py  cpp.pyi  transform.py
src/: pointcloud.cpp  transform.cpp  transformation.cpp
srcpy/: bindings.cpp
tests/: test_pointcloud.cpp  test_transform.cpp  test_transform.py  test_transformation.cpp  test_transformation.py
tests/data/: pointcloud.json
