<?xml version="1.0"?>
<?xml-model
href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>spatial_transformation</name>
    <version>0.9.0</version>
    <description>
        Utility package for working with spatial transformations in both C++ and
        Python.
    </description>
    <author email="felix.widmaier@tue.mpg.de">Felix Widmaier</author>
    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>pybind11</build_depend>
    <build_depend>mpi_cmake_modules</build_depend>

    <depend>cereal</depend>
    <depend>serialization_utils</depend>

    <test_depend>ament_cmake_gmock</test_depend>
    <test_depend>ament_cmake_pytest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
